# minimal_local_planner

./: CMakeLists.txt  README.md  mlp_plugin.xml  package.xml
include/minimal_local_planner/: minimal_local_planner.h
src/: minimal_local_planner.cpp
